added alura logo and character SVGs into img folder

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge One Encriptador</title>
-    <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <img src="img/logo alura.svg" alt="Logo Alura">
+        <img src="img/alura.svg" alt="Logo Alura">
     </header>
     <main>
         <section class="encriptar">
@@ -30,7 +30,7 @@
                 <h2 id="titulo-resultado"></h2>
             </div>
             <div id="toy" class="conteinerImg">
-                <img src="img/Muñeco.svg" alt="Muñeco">
+                <img src="img/character.svg" alt="Muñeco">
                 <p class="text1"><strong>Ningún  mensaje fue encontrado</strong></p>
                 <p class="text2">Ingresa el texto que deseas encriptar o desencriptar</p>
             </div>
@@ -45,9 +45,9 @@
         <a>&copy; 2022 Paulo Abraham Barrientos Casanova/ALURA LATAM</a>
     </footer>
 
-    <script src="assets/js/encriptador.js"></script>
-    <script src="assets/js/desencriptador.js"></script>
-    <script src="assets/js/copiar.js"></script>
+    <script src="js/encriptador.js"></script>
+    <script src="js/desencriptador.js"></script>
+    <script src="js/copiar.js"></script>
 </body>
 
 </html>
