added css styles modifications

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <footer>    
         <a> &copy;2022&nbsp; </a>
         <a href="https://github.com/veridisQuo18"> VeridisQuo18 </a>
-        &xcap;
+        <a>&xcap;</a>
         <a href="https://www.aluracursos.com/"> Alura Latam </a>
     </footer>
 
